--- a/catalog.html
+++ b/catalog.html
@@ -7,156 +7,161 @@
   <body>
   	<header class="main-header">
       <div class="top-menu">
-      	<a class="main-header-logo">
+        <a class="main-header-logo">
           <img src="#" alt="Логотип Техномарта">
         </a>
         <a class="search" href="#">Поиск</a>
-        <a class="bookmark" href="#">Закладки</a>
-        <a class="cart" href="#">Корзина</a>
+        <a class="bookmark" href="#">Закладки: 0</a>
+        <a class="cart" href="#">Корзина: 0</a>
         <a class="make-order" href="#">Оформить заказ</a>
-        <h1>Интернет-магазин строительных матералов и инструментов для ремонта</h1>
-        <p class="main-header-phone">+7(812)555-05-55</p>
+      </div> 
+      <div class="bottom-menu">
+        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <a href="tel:+78125550555" class="main-header-phone">+7(812)555-05-55</a>
         <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <ul class="user-navigation">
-          <li><a class="order-link" href="#">Мои заказы</a></li> 
-          <li><a class="profile-link" href="#">Личный кабинет</a></li>
-        </ul>
-      </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div class="catalog-container">
-        <nav class="catalog-navigation">
-          <ul>
+        <div class="user-navigation">
+          <a class="order-link" href="#">Мои заказы</a> 
+          <a class="profile-link" href="#">Личный кабинет</a>
+        </div>
+        <nav class="main-navigation">
+          <ul class="site-navigation">
             <li><a href="#">Главная</a></li>
+            <li><a href="#">Компания</a></li>
             <li><a href="#">Каталог</a></li>
-            <li><a href="#">Инструмент</a></li>
-            <li><a href="#">Перфораторы</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
-        <h2 class="catalog-current-page">Перфораторы</h2>
-        <section class="filters">
-          <h3>Фильтр:</h3>
-          <div class="price-filter">
-            <span>Цена:</span>
-          </div>
-          <div class="brand-filter">
-            <ul>
-              <li><a href="#">Bosch</a></li>
-              <li><a href="#">Интерскол</a></li>
-              <li><a href="#">Makita</a></li>
-              <li><a href="#">DeWALT</a></li>
-              <li><a href="#">Hitachi</a></li>
-            </ul>
-          </div>
-          <div class="type-filter">
-            <ul>
-              <li>Аккумуляторные</li>
-              <li>Сетевые</li>
-            </ul>
-          </div>
-          <a class="show-button" href="#"></a>
-        </section>
-        <section class="sort">
-          <div class="sort-list">
-            <h3>Сортировка:</h3>
-            <ul>
-              <li>По цене</li>
-              <li>По типу</li>
-              <li>По функционалу</li>
-              <li>По возрастанию цены</li>
-              <li>По убыванию цены</li>
-            </ul>
-          </div>
-          <div class="catalog-items">
-            <ul>
-              <li>
-                <h3>Перфоратор BOSCH BFG 3000</h3>
-                <span class="past-price">22500 Р.</span>
-                <span class="actual-price">15500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <span class="past-price">30500 Р.</span>
-                <span class="actual-price">25500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 2000</h3>
-                <span class="actual-price">12500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 3000</h3>
-                <span class="past-price">22500 Р.</span>
-                <span class="actual-price">15500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <span class="past-price">30500 Р.</span>
-                <span class="actual-price">25500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 2000</h3>
-                <span class="actual-price">12500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 3000</h3>
-                <span class="past-price">22500 Р.</span>
-                <span class="actual-price">15500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <span class="past-price">30500 Р.</span>
-                <span class="actual-price">25500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-              <li>
-                <h3>Перфоратор BOSCH BFG 2000</h3>
-                <span class="actual-price">12500 Р.</span>
-                <a class="buy" href="#">Купить</a>
-                <a class="bookmark" href="#">В закладки</a>
-              </li>
-            </ul>
-          </div>
-          <div class="pages">
-            <ul>
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">Следующая</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="about-type">
-          <h2>Пара слов о перфораторах</h2>
-          <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br>
-Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
-        </section>
       </div>
+    </header>
+    <main>    
+      <div class="catalog-navigation">
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Перфораторы</a></li>
+        </ul>
+      </div>
+      <h2 class="catalog-current-page">Перфораторы</h2>
+      <section class="filters">
+        <h3>Фильтр:</h3>
+        <div class="price-filter">
+          <span>Цена:</span>
+        </div>
+        <div class="brand-filter">
+          <ul>
+            <li><a href="#">Bosch</a></li>
+            <li><a href="#">Интерскол</a></li>
+            <li><a href="#">Makita</a></li>
+            <li><a href="#">DeWALT</a></li>
+            <li><a href="#">Hitachi</a></li>
+          </ul>
+        </div>
+        <div class="type-filter">
+          <ul>
+            <li>Аккумуляторные</li>
+            <li>Сетевые</li>
+          </ul>
+        </div>
+        <a class="show-button" href="#"></a>
+      </section>
+      <section class="sort">
+        <div class="sort-list">
+          <h3>Сортировка:</h3>
+          <ul>
+            <li><a href="#">По цене</a></li>
+            <li><a href="#">По типу</a></li>
+            <li><a href="#">По функционалу</a></li>
+            <li><a href="#">По возрастанию цены</a></li>
+            <li><a href="#">По убыванию цены</a></li>
+          </ul>
+        </div>
+        <ul class="catalog-items">
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <span class="past-price">22500 Р.</span>
+            <span class="actual-price">15500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <span class="past-price">30500 Р.</span>
+            <span class="actual-price">25500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <span class="actual-price">12500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <span class="past-price">22500 Р.</span>
+            <span class="actual-price">15500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <span class="past-price">30500 Р.</span>
+            <span class="actual-price">25500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <span class="actual-price">12500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <span class="past-price">22500 Р.</span>
+            <span class="actual-price">15500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <span class="past-price">30500 Р.</span>
+            <span class="actual-price">25500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+          <li>
+            <img src="#" alt="Фото перфоратора">
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <span class="actual-price">12500 Р.</span>
+            <a class="buy" href="#">Купить</a>
+            <a class="bookmark" href="#">В закладки</a>
+          </li>
+        </ul>
+        <ul class="pages">
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">Следующая</a></li>
+        </ul>        
+      </section>
+      <section class="about-type">
+        <h2>Пара слов о перфораторах</h2>
+        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br>
+Сущевуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбоый молоток и ударная дрель.</p>
+      </section>    
     </main>
     <footer class="main-footer">
       <div class="footer-information">
@@ -181,15 +186,15 @@
         </nav>
       </div>
       <div class="copyright">
-        <p>© 2010–2017 Компания «Техномарт»<br>
+        <p class="rights">© 2010–2017 Компания «Техномарт»<br>
         Все права защищены</p>
         <ul class="social">
           <li><a class="vk" href="#">Вконтакте</a></li>
           <li><a class="fb" href="#">Facebook</a></li>
           <li><a class="insta" href="#">Instagram</a></li>
         </ul>
-        <p>Обратная связь: mail@htmlacademy.ru</p>
-        <p>Разработано — htmlacademy.ru</p>
+        <p class="feedback">Обратная связь: mail@htmlacademy.ru</p>
+        <p class="developer">Разработано — htmlacademy.ru</p>
       </div>
     </footer>
   </body>
