--- a/index.html
+++ b/index.html
@@ -11,136 +11,142 @@
           <img src="#" alt="Логотип Техномарта">
         </a>
         <a class="search" href="#">Поиск</a>
-        <a class="bookmark" href="#">Закладки</a>
-        <a class="cart" href="#">Корзина</a>
+        <a class="bookmark" href="#">Закладки: 0</a>
+        <a class="cart" href="#">Корзина: 0</a>
         <a class="make-order" href="#">Оформить заказ</a>
-        <h1>Интернет-магазин строительных матералов и инструментов для ремонта</h1>
-        <p class="main-header-phone">+7(812)555-05-55</p>
+       </div> 
+       <div class="bottom-menu">
+        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <a href="tel:+78125550555" class="main-header-phone">+7(812)555-05-55</a>
         <p class="main-header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <ul class="user-navigation">
-          <li class="login-link">Войти</li>
-          <li class="registration-link">Регистрация</li>
-        </ul>
+        <div class="user-navigation">
+          <a class="login-link" href="#">Войти</a>
+          <a class="registration-link" href="#">Регистрация</a>
+        </div>
+        <nav class="main-navigation">
+          <ul class="site-navigation">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
     </header>
     <main>
       <section class="features">
         <h2 class="visually-hidden">Услуги и условия</h2>
-        <div class="items">
-          <div class="item-1">
-            <h3>Материалы</h3>
-            <a class="materials" href="#">На любой вкус</a>
-          </div>
-          <div class="item-2">
-            <h3>Инструмент</h3>
-            <a class="instruments" href="#">На все случаи</a>
-          </div>
-          <div class="item-3">
-            <h3>Техника</h3>
-            <a class="technics" href="#">Для стройки</a>
-          </div>
-          <div class="slider-1">
-            <ul class="slider-1-items">
-              <li>
-                <h3>Дрели</h3>
-                <span>Соседям в радость!</span>
-                <a class="link" href="#">Открыть каталог</a>
-              </li>
-              <li class="visually-hidden">
-                <h3>Перфораторы</h3>
-                <span>Настоящие мужские игрушки</span>
-                <a class="link" href="#">Открыть каталог</a>
-              </li>
-            </ul>
-          </div>
-          <div class="item-4">
-            <h3>Скидки 50%</h3>
-            <a class="sale" href="#">На 350 товаров</a>
-          </div>
-          <div class="item-5">
-            <h3>Доставка</h3>
-            <a class="delivery" href="#">Бесплатно</a>
-          </div>
+        <div class="item">
+          <h3>Материалы</h3>
+          <a href="#">На любой вкус</a>
+        </div>
+        <div class="item">
+          <h3>Инструмент</h3>
+          <a href="#">На все случаи</a>
+        </div>
+        <div class="item">
+          <h3>Техника</h3>
+          <a href="#">Для стройки</a>
+        </div>
+        <div class="slider">
+          <ul class="slider-items">
+            <li>
+              <h3>Дрели</h3>
+              <p>Соседям в радость!</p>
+              <a class="link" href="#">Открыть каталог</a>
+            </li>
+            <li class="visually-hidden">
+              <h3>Перфораторы</h3>
+              <p>Настоящие мужские игрушки</p>
+              <a class="link" href="#">Открыть каталог</a>
+            </li>
+          </ul>
+        </div>
+        <div class="item">
+          <h3>Скидки 50%</h3>
+          <a href="#">На 350 товаров</a>
+        </div>
+        <div class="item">
+          <h3>Доставка</h3>
+          <a href="#">Бесплатно</a>
         </div>
       </section>
       <section class="popular">
-        <h2>Популярные товары:</h2>
-        <a class="link popular-link" href="#">Все популярные товары</a>
+      	<div class="section-top">
+          <h2>Популярные товары:</h2>
+          <a class="link" href="#">Все популярные товары</a>
+        </div>
         <ul>
           <li>
+          	<img src="#" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <span class="past-price">32500 Р.</span>
             <span class="actual-price">25500 Р.</span>
           </li>
           <li>
+          	<img src="#" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="past-price">22500 Р.</span>
             <span class="actual-price">15500 Р.</span>
           </li>    
           <li>
+          	<img src="#" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="past-price">30500 Р.</span>
             <span class="actual-price">25500 Р.</span>
           </li>   
           <li>
+          	<img src="#" alt="Фото перфоратора">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="actual-price">12500 Р.</span>
           </li>
         </ul>
       </section>
       <section class="brands">
-        <h2>Популярные производители:</h2>
-        <a class="link brands-link" href="#">Все производители</a>
+        <div class="section-top">
+          <h2>Популярные производители:</h2>
+          <a class="link" href="#">Все производители</a>
+        </div>
         <ul class="brands-list">
           <li>
-            <a class="borch" href="#">Bosch</a>
+            <a href="#"><img src="#" alt="Bosch"></a>
           </li>
-          <li>
-            <a class="makita" href="#">Makita</a>
+          <li>            
+            <a href="#"><img src="#" alt="Makita"></a>
           </li>
-          <li>
-            <a class="dewalt" href="#">DeWALT</a>
+          <li>            
+            <a href="#"><img src="#" alt="DeWALT"></a>
           </li>
-          <li>
-            <a class="interskol" href="#">Интерскол</a>
+          <li>            
+            <a href="#"><img src="#" alt="Интерскол"></a>
           </li>
-          <li>
-            <a class="hitachi" href="#">Hitachi</a>
+          <li>            
+            <a href="#"><img src="#" alt="Hitachi"></a>
           </li>
-          <li>
-            <a class="lg" href="#">LG</a>
+          <li>            
+            <a href="#"><img src="#" alt="LG"></a>
           </li>
-          <li>
-            <a class="aeg" href="#">AEG Power Solutions</a>
+          <li>            
+            <a href="#"><img src="#" alt="AEG Power Solutions"></a>
           </li>
-          <li>
-            <a class="metabo" href="#">Metabo work. don't play.</a>
+          <li>            
+            <a href="#"><img src="#" alt="Metabo work. don't play."></a>
           </li>
         </ul>
       </section>
       <section class="services">
         <h2>Сервисы</h2>
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <div class="slider-2">
-          <div class="slider-2-buttons">
-            <ul>
-              <li>Доставка</li>
-              <li>Гарантия</li>
-              <li>Кредит</li>
-            </ul>
-          </div>
-          <div class="slider-2-content">
+        <div class="slider">          
+          <ul>
+            <li>Доставка</li>
+            <li>Гарантия</li>
+            <li>Кредит</li>
+          </ul>         
+          <div class="slider-content">
             <ul>
               <li>
                 <h3>Доставка</h3>
@@ -159,7 +165,7 @@
           </div>
         </div>
       </section>
-      <article class="about">
+      <section class="about">
       	<h2 class="visually-hidden">О компании</h2>
         <div class="company">
           <h3>Компания «Техномарт»</h3>
@@ -178,7 +184,7 @@
           <a class="map" href="#">Карта</a>
           <a class="link about-form" href="#">Заблудились? Напишите нам!</a>
         </div>
-      </article>
+      </section>
     </main>
     <footer class="main-footer">
       <div class="footer-information">
@@ -186,7 +192,7 @@
           <img src="#" alt="Логотип Техномарта">
         </a>
         <p class="main-footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7(812)555-05-55</p>
-        <nav class="footer-navigation">
+        <div class="footer-navigation">
           <ul class="main-footer-navigation">
             <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
@@ -200,18 +206,18 @@
             <li><a href="#">Инструмент</a></li>
             <li><a href="#">Спецпредложения</a></li>
           </ul>      
-        </nav>
+        </div>
       </div>
       <div class="copyright">
-        <p>© 2010–2017 Компания «Техномарт»<br>
+        <p class="rights">© 2010–2017 Компания «Техномарт»<br>
         Все права защищены</p>
         <ul class="social">
           <li><a class="vk" href="#">Вконтакте</a></li>
           <li><a class="fb" href="#">Facebook</a></li>
           <li><a class="insta" href="#">Instagram</a></li>
         </ul>
-        <p>Обратная связь: mail@htmlacademy.ru</p>
-        <p>Разработано — htmlacademy.ru</p>
+        <p class="feedback">Обратная связь: mail@htmlacademy.ru</p>
+        <p class="developer">Разработано — htmlacademy.ru</p>
       </div>
     </footer>
   </body>
