Добавлены состояния объектов

--- a/catalog.html
+++ b/catalog.html
@@ -169,7 +169,7 @@
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
-                <li>
+                <li class="new">
                   <div class="item-img">
                     <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
                   </div>
@@ -192,7 +192,7 @@
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
-                <li>
+                <li class="new">
                   <div class="item-img">
                     <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
                   </div>
@@ -215,7 +215,7 @@
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
-                <li>
+                <li class="new">
                   <div class="item-img">
                     <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
                   </div>
@@ -254,7 +254,7 @@
             </div>
             <div class="pages">
               <ul>
-                <li><a href="#">1</a></li>
+                <li class="current-page"><a href="#">1</a></li>
                 <li><a href="#">2</a></li>
                 <li><a href="#">3</a></li>
                 <li class="next-page"><a href="#">Следующая</a></li>
